fix: doctor-single progress item break on single

--- a/css/style.css
+++ b/css/style.css
@@ -10731,17 +10731,6 @@ ul.children {
 
 .doctor-single-area {
   position: relative;
-  padding: 140px 0;
-}
-@media (max-width: 991px) {
-  .doctor-single-area {
-    padding: 80px 0;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .doctor-single-area {
-    padding: 100px 0;
-  }
 }
 .doctor-single-area .feature-shape {
   position: absolute;
