--- a/sass/pages/_doctor-single.scss
+++ b/sass/pages/_doctor-single.scss
@@ -1,12 +1,12 @@
 .doctor-single-area {
     position: relative;
-    padding: 140px 0;
-    @include rmaxwd(991) {
-        padding: 80px 0;
-    }
-    @include lg {
-        padding: 100px 0;
-    }
+    // padding: 140px 0;
+    // @include rmaxwd(991) {
+    //     padding: 80px 0;
+    // }
+    // @include lg {
+    //     padding: 100px 0;
+    // }
     .feature-shape {
         position: absolute;
         top: 12px;
